spire-agent-backup.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  annotations:
    deprecated.daemonset.template.generation: "3"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"DaemonSet","metadata":{"annotations":{},"name":"spire-agent","namespace":"spire"},"spec":{"selector":{"matchLabels":{"app":"spire-agent"}},"template":{"metadata":{"labels":{"app":"spire-agent"}},"spec":{"containers":[{"args":["-config","/run/spire/config/agent.conf"],"env":[{"name":"MY_NODE_NAME","valueFrom":{"fieldRef":{"fieldPath":"spec.nodeName"}}}],"image":"ghcr.io/spiffe/spire-agent:1.8.0","livenessProbe":{"httpGet":{"path":"/live","port":8080},"initial [...]
  creationTimestamp: "2025-08-20T07:43:11Z"
  generation: 3
  name: spire-agent
  namespace: spire
  resourceVersion: "2277101"
  uid: 7b743e44-09dd-44b4-9a7b-f24b09e16141
spec:
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: spire-agent
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2025-08-21T23:32:31+09:00"
      creationTimestamp: null
      labels:
        app: spire-agent
    spec:
      containers:
      - args:
        - -config
        - /run/spire/config/agent.conf
        image: ghcr.io/spiffe/spire-agent:1.8.0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /live
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: spire-agent
        ports:
        - containerPort: 8080
          name: health
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /ready
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /run/spire/config
          name: spire-config
          readOnly: true
        - mountPath: /run/spire/sockets
          name: spire-agent-socket
        - mountPath: /var/run/secrets/tokens
          name: spire-token
          readOnly: true
      dnsPolicy: ClusterFirstWithHostNet
      hostNetwork: true
      hostPID: true
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: spire-agent
      serviceAccountName: spire-agent
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: spire-agent
        name: spire-config
      - hostPath:
          path: /run/spire/sockets
          type: DirectoryOrCreate
        name: spire-agent-socket
      - name: spire-token
        projected:
          defaultMode: 420
          sources:
          - serviceAccountToken:
              audience: spire-server
              expirationSeconds: 7200
              path: spire-agent
  updateStrategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
status:
  currentNumberScheduled: 5
  desiredNumberScheduled: 5
  numberMisscheduled: 0
  numberReady: 0
  numberUnavailable: 5
  observedGeneration: 3
  updatedNumberScheduled: 5
