ingress-updated.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: msa-ingress
  namespace: production
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:928475935003:certificate/4cc92cae-e303-4ecf-a4f4-63c9f591f0d3
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: msa-prod
    alb.ingress.kubernetes.io/healthcheck-path: /api/v1/health  # 수정
spec:
  ingressClassName: alb
  rules:
  - host: api.cloudwave10.shop
    http:
      paths:
      # Spring Application
      - path: /ping
        pathType: Exact
        backend:
          service:
            name: spring-x86-svc
            port:
              number: 80
      - path: /healthz
        pathType: Exact
        backend:
          service:
            name: spring-x86-svc
            port:
              number: 80
              
      # Order Service Health (수정)
      - path: /api/v1/health
        pathType: Exact
        backend:
          service:
            name: order-service
            port:
              number: 8080
              
      # Order Service API
      - path: /api/v1/orders
        pathType: Prefix
        backend:
          service:
            name: order-service
            port:
              number: 8080
              
      # Product Service API  
      - path: /api/v1/products
        pathType: Prefix
        backend:
          service:
            name: product-service
            port:
              number: 8081
